--- a/AngularBootstrap/package.json
+++ b/AngularBootstrap/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@popperjs/core": "^2.10.1",
     "bootstrap": "^5.1.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
