--- a/AngularMaterial/package.json
+++ b/AngularMaterial/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "@auth0/angular-jwt": "^5.0.2",
     "@types/node": "^16.10.9",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.5.5",
