--- a/AngularMaterial/package.json
+++ b/AngularMaterial/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~10.0.14",
     "@auth0/angular-jwt": "^5.0.2",
     "@types/node": "^16.10.9",
+    "ng-image-slider": "^2.8.0",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
